added Gradient picker directory + other stuff

--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
 
 <head>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<title>Theooolone's Website</title>
 </head>
 
 <body>
-<p>Test</p>
+<p>Welcome to my website, this is still a WIP, have some random links, if these links don't work I'm sorry</p>
+<a href="/gradient-picker/">Gradient Picker</a>
+<a href="/info">Info</a>
 </body>
