--- a/info/index.html
+++ b/info/index.html
@@ -5,5 +5,5 @@
 </head>
 
 <body>
-<p>Sub-Directiory Example!</p>
+<p>Hi, I'm Theooolone, you can find me on <a href="https://www.youtube.com/Theooolone">Youtube</a> and other sites that I will probably add later.</p>
 </body>
