--- a/gradient-picker/index.html
+++ b/gradient-picker/index.html
@@ -7,7 +7,7 @@
 	
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 
-	<link rel="stylesheet" href="pagelayout.css">
+	<link rel="stylesheet" href="../pagelayout.css">
 	<link rel="stylesheet" href="gradient-picker.css">
 	<link href="https://fonts.googleapis.com/css2?family=Chango&family=Secular+One&display=swap" rel="stylesheet">
 </head>
@@ -28,7 +28,12 @@
 		<button class="menu-button">Useless Button</button>
 	</div>
 	<div class="page-header">GRADIENT PICKER</div>
-	<div class="page-content"><p style="opacity: .9; text-align: center;">Awesome content coming soon if I remember that this exists, what do you think of this background effect? It took like an hour!</p></div>
+	<div class="page-content">
+
+		
+		<p style="opacity: .9; text-align: center;">Awesome content coming soon if I remember that this exists, what do you think of this background effect? It took like an hour!</p></div>
+		
+
 	<div class="page-footer"><p>Uhhhhh this is the page footer! idk what to put here</p></div>
 </body>
 </html>
