--- a/index.html
+++ b/index.html
@@ -2,12 +2,37 @@
 <html>
 
 <head>
+
+	<title>Theooolone.com</title>
+	
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
-	<title>Theooolone's Website</title>
+
+	<link rel="stylesheet" href="pagelayout.css">
+	<link href="https://fonts.googleapis.com/css2?family=Chango&family=Secular+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
-<p>Welcome to my website, this is still a WIP, have some random links, if these links don't work I'm sorry</p>
-<a href="/gradient-picker/">Gradient Picker</a>
-<a href="/info">Info</a>
+	<div class="beams">
+		<div class="light-beam"></div>
+		<div class="light-beam lbr"></div>
+	</div>
+	<div class="beams b2">
+		<div class="light-beam b2"></div>
+		<div class="light-beam lbr b2"></div>
+	</div>
+	<div class="page-menu">
+		<a href="/"><button class="menu-button home-button">Home</button></a>
+		<a href="/gradient-picker"><button class="menu-button gradient-picker-button">Gradient Picker</button></a>
+		<a href="/info"><button class="menu-button">Info</button></a>
+		<button class="menu-button">Useless Button</button>
+	</div>
+	<div class="page-header">Theooolone.com</div>
+	<div class="page-content">
+
+		
+		<p style="opacity: .9; text-align: center;">Awesome content coming soon if I remember that this exists, what do you think of this background effect? It took like an hour!</p></div>
+		
+
+	<div class="page-footer"><p>Uhhhhh this is the page footer! idk what to put here</p></div>
 </body>
+</html>
