--- a/info/index.html
+++ b/info/index.html
@@ -6,4 +6,5 @@
 
 <body>
 <p>Hi, I'm Theooolone, you can find me on <a href="https://www.youtube.com/Theooolone">Youtube</a> and other sites that I will probably add later.</p>
+<a href="/">Home</a>
 </body>
